Ruleta hasta comentario de bucle

--- a/ruleta.ipynb
+++ b/ruleta.ipynb
@@ -99,7 +99,6 @@
     "    print(falta_pasa)\n",
     "    \n",
     "    #Cada vegada que surt un número, s'indica el terç\n",
-    "    \n",
     "    if 1 <= numero and numero <= 12:\n",
     "        docena= \"primera docena\"\n",
     "    elif 13 <= numero and numero <= 24:\n",
@@ -107,7 +106,22 @@
     "    else:\n",
     "        docena= \"tercera docena\"\n",
     "    print(docena)\n",
+    "    \n",
     "        \n",
+    "    #Cada vegada que surt un número, s'indica la columna\n",
+    "    if numero % 3 == 2:\n",
+    "        columna= \"primera columna\"\n",
+    "    elif numero % 3 == 1:\n",
+    "        columna= \"segunda coluna\"\n",
+    "    else:\n",
+    "        columna= \"tercera columna\"\n",
+    "    print(columna)\n",
+    "    \n",
+    "    #Cada vegada que l'usuari prem una tecla\n",
+    "    #es mostra un missatje jugada x, \n",
+    "    #on x és el número de jugada, que comença amb l'1\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    \n",
     "    \n",
